# physical-ai-interfaces

./: .gitignore
backend/: pyproject.toml  pytest.ini
backend/src/interfaces_backend/: main.py
backend/src/interfaces_backend/api/: __init__.py  analytics.py  auth.py  build.py  calibration.py  config.py  experiments.py  hardware.py  inference.py  operate.py  platform.py  profiles.py  project.py  recording.py  startup.py  storage.py  stream.py  system.py  teleop.py  training.py  user.py  webui_blueprints.py
backend/src/interfaces_backend/clients/: gpu_host.py
backend/src/interfaces_backend/core/: logging.py  request_auth.py
backend/src/interfaces_backend/models/: __init__.py  analytics.py  auth.py  build.py  calibration.py  comm_overhead.py  config.py  experiment.py  hardware.py  inference.py  operate.py  platform.py  profile.py  project.py  recording.py  startup.py  storage.py  system.py  teleop.py  training.py  training_config.py  user.py  webui_blueprints.py
backend/src/interfaces_backend/services/: comm_overhead_store.py  dataset_lifecycle.py  inference_recording_controller.py  inference_runtime.py  inference_session.py  lerobot_runtime.py  model_sync_jobs.py  profile_settings.py  realtime_events.py  realtime_producers.py  recorder_bridge.py  recorder_status_stream.py  recording_session.py  session_control_events.py  session_manager.py  startup_operations.py  teleop_session.py  vlabor_dashboard_bridge.py  vlabor_profiles.py  vlabor_runtime.py
backend/src/interfaces_backend/services/storage/: __init__.py  hash.py  huggingface.py  manifest.py  sync.py
backend/src/interfaces_backend/utils/: docker_compose.py  sse.py  torch_info.py
backend/tests/: conftest.py
backend/tests/e2e/error/: test_recording.py  test_training.py  test_vlabor.py
backend/tests/e2e/normal/: test_build.py  test_calibration.py  test_config.py  test_hardware.py  test_health.py  test_inference.py  test_platform.py  test_system.py  test_training.py  test_user.py  test_vlabor.py  test_webui_blueprints.py
backend/tests/e2e/ws/: test_build_ws.py  test_calibration_ws.py  test_training_ws.py
backend/tests/unit/: test_analytics_comm_overhead.py  test_comm_overhead_store.py  test_dataset_lifecycle_model_sync.py  test_inference_models_api.py  test_inference_recording_api.py  test_inference_recording_controller.py  test_inference_session_manager.py  test_inference_stop_api.py  test_lerobot_runtime.py  test_realtime_producers.py  test_recording_continue_api.py  test_recording_session_manager.py  test_recording_startup_api.py  test_session_control_stream_api.py  test_startup_operations_service.py  test_startup_stream_api.py  test_storage_dataset_reupload_api.py  test_storage_model_sync_api.py  test_training_gpu_availability.py  test_training_remote_checkpoint_upload.py  test_vlabor_profiles.py  test_vlabor_profiles_active_profile.py  test_vlabor_runtime.py
cli/: .gitignore  DESIGN.md  pyproject.toml
cli/src/interfaces_cli/: __init__.py  app.py  auth_session.py  banner.py  client.py  main.py  menu_system.py  styles.py
cli/src/interfaces_cli/core/: __init__.py
cli/src/interfaces_cli/menus/: __init__.py  build.py  config.py  info.py  main_menu.py  operate.py  record.py  setup.py  storage.py  train.py
experiments_app/: app.py  pyproject.toml
experiments_app/src/experiments_app/: __init__.py  main.py
tauri/: pnpm-lock.yaml
tui/: pyproject.toml
tui/src/interfaces_tui/: __init__.py  main.py
web/: NOTES.md  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
web/src/: app.css
web/src/lib/: config.ts  format.ts  navigation.ts  policies.ts  queryClient.ts
web/src/lib/api/: client.ts
web/src/lib/blueprints/: blueprintManager.ts  draftStorage.ts
web/src/lib/components/: ActiveSessionCard.svelte  ActiveSessionSection.svelte  AppShell.svelte  HelpLabel.svelte  OperateStatusCards.svelte  TaskCandidateCombobox.svelte
web/src/lib/realtime/: stream.ts
web/src/lib/recording/: blueprint.ts  recorderStatus.ts  rosbridge.ts  viewRegistry.ts
web/src/lib/types/: training.ts
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
web/src/routes/auth/: +page.svelte
(+46 files in other folders)
