[project]
name = "interfaces-backend"
version = "0.1.0"
description = "Backend API for Percus Physical AI Framework"
requires-python = ">=3.10,<3.13"
license = { text = "Proprietary" }

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
phi-server = "interfaces_backend.main:main"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "httpx",  # for testing
]
build = [
    "pyinstaller>=6.0.0",  # for Tauri sidecar binary
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/interfaces_backend"]
