[project]
name = "interfaces-cli"
version = "0.1.0"
description = "CLI for Percus Physical AI Framework"
requires-python = ">=3.10,<3.13"
license = { text = "Proprietary" }

dependencies = [
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.scripts]
phi = "interfaces_cli.main:app"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/interfaces_cli"]
