[project]
name = "interfaces-experiments-app"
version = "0.1.0"
description = "Streamlit experiment manager for Physical AI"
requires-python = ">=3.10,<3.13"
license = { text = "Proprietary" }

dependencies = [
    "httpx>=0.27.0",
    "streamlit>=1.31.0",
]

[project.scripts]
exp-app = "experiments_app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/experiments_app"]
