[project]
name = "interfaces-tui"
version = "0.1.0"
description = "TUI for Physical AI Framework"
requires-python = ">=3.10,<3.13"
license = { text = "Proprietary" }

dependencies = [
    "textual>=0.50.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
phi-tui = "interfaces_tui.main:main"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "textual-dev",  # for TUI development tools
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/interfaces_tui"]
